syntax = "proto3";

package note;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

service NoteService {
  rpc Create(NoteReq) returns (Note) {}
  rpc Find(NoteFindReq) returns (Note) {}
  // rpc Find(NoteFindReq) returns (Note) {
  //   option (google.api.http) = {
  //     get: "/v1/note/{id}"
  //   };
  // }
  rpc Delete(NoteDelReq) returns (NoteDelRes) {
    option (google.api.http) = {
      delete: "/note/{id}" 
    };
  }
}

message Note {
  int32 id = 1 [(gogoproto.moretags) = "bson:\"note_id\""];
  string title = 2 [(gogoproto.moretags) = "bson:\"title\""];
  bool completed = 3; // Default
  // bool complete = 3; // Only change the name
  // int32 completed = 3; // Change data type 
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  string description = 6;
}

message NoteReq {
  string title = 1;
  bool completed = 2;
}

message NoteFindReq {
  int32 id = 1;
}

message NoteDelReq{
  int32 id = 5;
}

message NoteDelRes{
  bool success = 1;
  string error_message = 2;
}